--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "axios": "^0.21.1",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
+    "esbuild": "^0.12.22",
     "nodemon": "^2.0.12"
   },
   "scripts": {
-    "start": "nodemon src"
+    "start": "nodemon",
+    "build": "esbuild src/index.js --bundle --platform=node --outdir=dist --external:discord.js"
   }
 }
