--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "esbuild": "^0.12.22",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "tsc": "^2.0.3"
   },
   "scripts": {
     "start": "nodemon",
-    "build": "esbuild src/index.js --bundle --platform=node --outdir=dist --external:discord.js"
+    "build": "esbuild src/index.ts --bundle --platform=node --outdir=dist --external:discord.js"
   }
 }
