--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.5.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "@types/node-fetch": "^2.5.12",
     "axios": "^0.21.1",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
