--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
     "outDir": "./dist",
-    "target": "ESNext"
+    "target": "ESNext",
+    "strict": true,
+    "allowJs": true
   }
 }
