--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   "dependencies": {
     "@discordjs/builders": "^0.5.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "@types/luxon": "^2.0.4",
     "@types/node-fetch": "^2.5.12",
     "axios": "^0.21.1",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "esbuild": "^0.12.22",
+    "luxon": "^2.0.2",
     "nodemon": "^2.0.12",
-    "tsc": "^2.0.3"
+    "tsc": "^2.0.3",
+    "typescript": "^4.4.3"
   },
   "scripts": {
     "start": "nodemon",
