--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "esbuild": "^0.12.22",
     "nodemon": "^2.0.12",
+    "puppeteer": "^10.4.0",
     "tsc": "^2.0.3"
   },
   "scripts": {
